--- a/Asthra/index.html
+++ b/Asthra/index.html
@@ -106,7 +106,7 @@ https://templatemo.com/tm-583-festava-live
                 <div class="row">
 
                     <div class="col-12 mt-auto mb-5 text-center">
-                        <small>Department of Mathematics Presents</small>
+                        <small><a href="https://stthomas.ac.in/mathematics/" style="color: white;">Department of Mathematics Presents</a></small>
 
                         <h1 class="text-white mb-5">Asthra 2023</h1>
 
@@ -145,7 +145,7 @@ https://templatemo.com/tm-583-festava-live
                                 </li>
 
                                 <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link">
+                                    <a href="https://instagram.com/asthra.2k23__?utm_source=qr&igshid=ZDExYjZkNGI0OA==" class="social-icon-link">
                                         <span class="bi-instagram"></span>
                                     </a>
                                 </li>
